Corrige os caminhos

--- a/compose/.env
+++ b/compose/.env
@@ -1,3 +1,3 @@
 # Caminhos devem ser relativos a essa pasta
-FRONTEND_PATH=../../agora-digital-frontend
-BACKEND_PATH=../../agora-digital-backend
+FRONTEND_PATH=../../leggo-frontend
+BACKEND_PATH=../../leggo-backend
