Atualiza .env.sample com os valores dafault das variáveis de ambiente.

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,8 @@
-PLS_FILEPATH=
-EXPORT_FOLDERPATH=
-LEGGOR_FOLDERPATH=
-LEGGOTRENDS_COMPOSE_FILEPATH=
-VERSOESPROPS_COMPOSE_FILEPATH=
-LEGGOCONTENT_COMPOSE_FILEPATH=
-LOG_FILEPATH=
+PLS_FILEPATH=./leggo_data/tabela_geral_ids_casa_new.csv
+WORKSPACE_FOLDERPATH=../
+EXPORT_FOLDERPATH=./leggo_data
+LEGGOR_FOLDERPATH=./leggoR
+LEGGOTRENDS_FOLDERPATH=./leggoTrends
+VERSOESPROPS_FOLDERPATH=./versoes-de-proposicoes
+LEGGOCONTENT_FOLDERPATH=./leggo-content
+LOG_FILEPATH=/tmp/update_leggo_data.log
