Adiciona o passo de verificação de erros ao final de cada passo das operações do script de atualização. Cria variáveis de ambiente para coisas que estavam hardcoded e atualiza documentação.

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,5 @@ LEGGOTRENDS_FOLDERPATH=./leggoTrends
 VERSOESPROPS_FOLDERPATH=./versoes-de-proposicoes
 LEGGOCONTENT_FOLDERPATH=./leggo-content
 LOG_FILEPATH=/tmp/update_leggo_data.log
+PROD_BACK_APP=production_app_name
+DEV_BACK_APP=production_app_name
