Adiciona scripts do LeggoTrends

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,4 @@ LEGGOCONTENT_FOLDERPATH=./leggo-content
 LOG_FILEPATH=/tmp/update_leggo_data.log
 PROD_BACK_APP=production_app_name
 DEV_BACK_APP=production_app_name
+LEGGOTRENDS_ENV_FILEPATH=./leggoTrends/.env
