Separa arquivos de log por execução e atualiza variável de ambiente com o destino destes arquivos

--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,6 @@ LEGGOR_FOLDERPATH=./leggoR
 LEGGOTRENDS_FOLDERPATH=./leggoTrends
 VERSOESPROPS_FOLDERPATH=./versoes-de-proposicoes
 LEGGOCONTENT_FOLDERPATH=./leggo-content
-LOG_FILEPATH=/tmp/update_leggo_data.log
+LOG_FOLDERPATH=/tmp/logs_leggo_updater/
 PROD_BACK_APP=production_app_name
 DEV_BACK_APP=production_app_name
