Adiciona configuração da stack de desenvolvimento usando o novo repositório angular do Leggo (painel)

--- a/compose/.env
+++ b/compose/.env
@@ -1,3 +1,4 @@
 # Caminhos devem ser relativos a essa pasta
 FRONTEND_PATH=../../leggo-frontend
 BACKEND_PATH=../../leggo-backend
+FRONTEND_PAINEL_PATH=../../leggo-painel
