começando função que gera backup dos csvs

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,4 @@ LEGGOCONTENT_FOLDERPATH=./leggo-content
 LOG_FOLDERPATH=/tmp/logs_leggo_updater/
 PROD_BACK_APP=production_app_name
 DEV_BACK_APP=production_app_name
+URL_LISTA_ANOTACOES="https://docs.google.com/spreadsheets/d/e/2PACX-1vQIC9sm_jTojACKqzF17nPU8qiQRmWSeaKDOeRuxkLnhSZwOwdx0GpgGflpJigM3-N_KOPBz85-wR_u/pub?gid=0&single=true&output=csv"
