Adiciona containers do leggo-witter e leggo-twitter-dados

--- a/compose/.env
+++ b/compose/.env
@@ -2,3 +2,5 @@
 FRONTEND_PATH=../../leggo-frontend
 BACKEND_PATH=../../leggo-backend
 FRONTEND_PAINEL_PATH=../../leggo-painel
+TWITTER_API_PATH=../../leggo-twitter
+TWITTER_API_DADOS_PATH=../../leggo-twitter-dados
