--- a/.env.sample
+++ b/.env.sample
@@ -5,8 +5,10 @@ LEGGOR_FOLDERPATH=./leggoR
 LEGGOTRENDS_FOLDERPATH=./leggoTrends
 VERSOESPROPS_FOLDERPATH=./versoes-de-proposicoes
 LEGGOCONTENT_FOLDERPATH=./leggo-content
+LEGGOTWITTER_FOLDERPATH=./leggo-twitter-dados
 LOG_FOLDERPATH=/tmp/logs_leggo_updater/
 PROD_BACK_APP=production_app_name
 DEV_BACK_APP=production_app_name
 URL_LISTA_ANOTACOES=./leggo_data/anotacoes_planilha.csv
 BACKUP_FOLDERPATH=./backups/
+URL_API_PARLAMETRIA="https://api.leggo.org.br"
