--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
-PLS_FILEPATH=./leggo_data/tabela_geral_ids_casa_new.csv
+URL_INTERESSES=URL_PLANILHA_INTERESSES
+PLS_FILEPATH=./leggo_data/pls_interesses.csv
 WORKSPACE_FOLDERPATH=../
 EXPORT_FOLDERPATH=./leggo_data
 LEGGOR_FOLDERPATH=./leggoR
@@ -6,9 +7,9 @@ LEGGOTRENDS_FOLDERPATH=./leggoTrends
 VERSOESPROPS_FOLDERPATH=./versoes-de-proposicoes
 LEGGOCONTENT_FOLDERPATH=./leggo-content
 LEGGOTWITTER_FOLDERPATH=./leggo-twitter-dados
-LOG_FOLDERPATH=/tmp/logs_leggo_updater/
+LOG_FOLDERPATH=./logs/
+BACKUP_FOLDERPATH=./backups/
 PROD_BACK_APP=production_app_name
 DEV_BACK_APP=production_app_name
 URL_LISTA_ANOTACOES=./leggo_data/anotacoes_planilha.csv
-BACKUP_FOLDERPATH=./backups/
 URL_API_PARLAMETRIA="https://api.leggo.org.br"
