--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,4 @@ PROD_BACK_APP=production_app_name
 DEV_BACK_APP=production_app_name
 URL_LISTA_ANOTACOES=./leggo_data/anotacoes_planilha.csv
 URL_API_PARLAMETRIA="https://api.leggo.org.br"
+URL_USERNAMES_TWITTER="https://docs.google.com/spreadsheets/d/e/2PACX-1vR1Dh6vN_cCzpPqtY1nfZU90W5nghlesAFAE3-uqMgw8tOn0UpKJjW-eNd_g-BAs-nhrXLBTDCL8IvJ/pub?gid=0&single=true&output=csv"
