Adiciona atributos para chamada da pressão do Twitter

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,4 @@ PROD_BACK_APP=production_app_name
 DEV_BACK_APP=production_app_name
 URL_LISTA_ANOTACOES=./leggo_data/anotacoes_planilha.csv
 BACKUP_FOLDERPATH=./backups/
+URL_TWITTER_API="https://leggo-twitter.herokuapp.com/api"
