Adiciona explicação de variáveis de ambiente e adiciona link de URL na versão teste

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-URL_INTERESSES=URL_PLANILHA_INTERESSES
+URL_INTERESSES="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOdLk1wxJsekjGF5alyD0AP25wVtpnq0QTy6IZTebY_WSiiAF6Any-_BWRTpcerTHHW4zJL3Y9hHpf/pub?gid=0&single=true&output=csv"
 PLS_FILEPATH=./leggo_data/pls_interesses.csv
 WORKSPACE_FOLDERPATH=../
 EXPORT_FOLDERPATH=./leggo_data
@@ -11,8 +11,7 @@ LOG_FOLDERPATH=./logs/
 BACKUP_FOLDERPATH=./backups/
 PROD_BACK_APP=production_app_name
 DEV_BACK_APP=production_app_name
-URL_LISTA_ANOTACOES=./leggo_data/anotacoes_planilha.csv
-BACKUP_FOLDERPATH=./backups/
+URL_LISTA_ANOTACOES="https://docs.google.com/spreadsheets/d/e/2PACX-1vQIC9sm_jTojACKqzF17nPU8qiQRmWSeaKDOeRuxkLnhSZwOwdx0GpgGflpJigM3-N_KOPBz85-wR_u/pub?gid=0&single=true&output=csv"
 URL_TWITTER_API="https://leggo-twitter.herokuapp.com/api"
 URL_API_PARLAMETRIA="https://api.leggo.org.br"
 URL_USERNAMES_TWITTER="https://docs.google.com/spreadsheets/d/e/2PACX-1vR1Dh6vN_cCzpPqtY1nfZU90W5nghlesAFAE3-uqMgw8tOn0UpKJjW-eNd_g-BAs-nhrXLBTDCL8IvJ/pub?gid=0&single=true&output=csv"
